feat: sign up multi step form

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,12 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
-::selection {
-	background-color: black;
-	color: white;
-}
+@layer components {
+    ::selection {
+        background-color: black;
+        color: white;
+    }
 
-::-moz-selection {
-	background-color: black;
-	color: white;
+    ::-moz-selection {
+        background-color: black;
+        color: white;
+    }
+
+    .dark ::selection {
+        background-color: white;
+        color: black;
+    }
+
+    .dark ::-moz-selection {
+        background-color: white;
+        color: black;
+    }
 }
