fix: sign up and sign in

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+/* .blockScro {} */
+
 @layer components {
     ::selection {
         background-color: black;
